--- a/Pear/Controllers/Create Profile Flow/Gender Input/GetStartedUserGenderViewController.storyboard
+++ b/Pear/Controllers/Create Profile Flow/Gender Input/GetStartedUserGenderViewController.storyboard
@@ -71,7 +71,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="wQg-q9-q86"/>
                                 </constraints>
-                                <state key="normal" title="Nonbinary"/>
+                                <state key="normal" title="Non Binary"/>
                                 <connections>
                                     <action selector="chooseGenderButtonClicked:" destination="FXP-xj-bEJ" eventType="touchUpInside" id="bpi-vm-gKB"/>
                                 </connections>
