--- a/Pear/Controllers/Create Profile Flow/Age Input/GetStartedAgeViewController.storyboard
+++ b/Pear/Controllers/Create Profile Flow/Age Input/GetStartedAgeViewController.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="g3V-Dz-VyH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="g3V-Dz-VyH">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -74,6 +74,9 @@
                                         <state key="normal" image="onboarding-close-button">
                                             <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="cancelButtonClicked:" destination="g3V-Dz-VyH" eventType="touchUpInside" id="6x0-aJ-b3X"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JBJ-8o-rjQ" userLabel="Progress View">
                                         <rect key="frame" x="0.0" y="49" width="0.0" height="1"/>
@@ -171,8 +174,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="onboarding-back-button" width="30" height="30"/>
-        <image name="onboarding-close-button" width="30" height="30"/>
-        <image name="onboarding-icon-age" width="32" height="32"/>
+        <image name="onboarding-back-button" width="120" height="120"/>
+        <image name="onboarding-close-button" width="120" height="120"/>
+        <image name="onboarding-icon-age" width="128" height="128"/>
     </resources>
 </document>
