--- a/Pear/Controllers/Create Profile Flow/DoDont Input/GetStartedDoDontViewController.storyboard
+++ b/Pear/Controllers/Create Profile Flow/DoDont Input/GetStartedDoDontViewController.storyboard
@@ -96,6 +96,9 @@
                                         <state key="normal" image="onboarding-close-button">
                                             <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="cancelButtonClicked:" destination="hsO-eP-Zhu" eventType="touchUpInside" id="1bf-QL-cJN"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="83X-w4-d7T" userLabel="Progress View">
                                         <rect key="frame" x="0.0" y="49" width="0.0" height="1"/>
