--- a/Pear/Controllers/Create Profile Flow/Gender Input/GetStartedChooseGenderViewController.storyboard
+++ b/Pear/Controllers/Create Profile Flow/Gender Input/GetStartedChooseGenderViewController.storyboard
@@ -114,6 +114,9 @@
                                         <state key="normal" image="onboarding-close-button">
                                             <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="cancelButtonClicked:" destination="FXP-xj-bEJ" eventType="touchUpInside" id="hwA-0t-fQ8"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KDY-hA-qWG">
                                         <rect key="frame" x="0.0" y="49" width="0.0" height="1"/>
