--- a/Pear/Controllers/Friends Tab/Main VC/FriendsTabViewController.storyboard
+++ b/Pear/Controllers/Friends Tab/Main VC/FriendsTabViewController.storyboard
@@ -137,20 +137,21 @@
                                             <constraint firstAttribute="height" constant="1" id="2sN-yP-NX2"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profiles Made by You" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOd-wP-66I">
-                                        <rect key="frame" x="107" y="14.5" width="161" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="friends-tab-top-image" translatesAutoresizingMaskIntoConstraints="NO" id="pNe-91-auO">
+                                        <rect key="frame" x="171.5" y="9" width="32" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="pNe-91-auO" secondAttribute="height" multiplier="1:1" id="04d-f8-jGU"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="pNe-91-auO" firstAttribute="centerX" secondItem="iMQ-Ki-GK9" secondAttribute="centerX" id="7Oc-qL-Ym4"/>
                                     <constraint firstAttribute="height" constant="50" id="F24-bV-d0u"/>
                                     <constraint firstItem="fSx-vJ-JRE" firstAttribute="width" secondItem="iMQ-Ki-GK9" secondAttribute="width" id="Jc7-ct-p9n"/>
-                                    <constraint firstItem="EOd-wP-66I" firstAttribute="centerX" secondItem="iMQ-Ki-GK9" secondAttribute="centerX" id="P0w-vl-f4H"/>
+                                    <constraint firstItem="pNe-91-auO" firstAttribute="centerY" secondItem="iMQ-Ki-GK9" secondAttribute="centerY" id="LIY-MM-zta"/>
                                     <constraint firstItem="fSx-vJ-JRE" firstAttribute="leading" secondItem="iMQ-Ki-GK9" secondAttribute="leading" id="QEj-N5-zQC"/>
-                                    <constraint firstItem="EOd-wP-66I" firstAttribute="centerY" secondItem="iMQ-Ki-GK9" secondAttribute="centerY" id="yFC-sT-cyl"/>
+                                    <constraint firstItem="fSx-vJ-JRE" firstAttribute="top" secondItem="pNe-91-auO" secondAttribute="bottom" constant="8" id="iFN-uu-4hU"/>
                                     <constraint firstAttribute="bottom" secondItem="fSx-vJ-JRE" secondAttribute="bottom" id="zXa-hm-4Sa"/>
                                 </constraints>
                             </view>
@@ -178,5 +179,6 @@
     </scenes>
     <resources>
         <image name="friends-create-profile" width="498" height="498"/>
+        <image name="friends-tab-top-image" width="500" height="500"/>
     </resources>
 </document>
