--- a/Pear/Controllers/Me Tab/MeTabViewController.storyboard
+++ b/Pear/Controllers/Me Tab/MeTabViewController.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Epp-Ix-2Bq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Epp-Ix-2Bq">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,17 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zV9-fG-U7M">
-                                <rect key="frame" x="20" y="597" width="335" height="50"/>
-                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="vfa-g9-bHN"/>
-                                </constraints>
-                                <state key="normal" title="Request a profile"/>
-                                <connections>
-                                    <action selector="requestProfileButtonClicked:" destination="Epp-Ix-2Bq" eventType="touchUpInside" id="4E1-Mx-mlk"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jm5-Sd-1i9" userLabel="Header Container">
                                 <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <subviews>
@@ -56,64 +45,24 @@
                                     <constraint firstItem="l2N-Iu-8ZE" firstAttribute="width" secondItem="jm5-Sd-1i9" secondAttribute="width" id="rwd-PA-9xM"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xOE-Pd-bIj">
-                                <rect key="frame" x="0.0" y="70" width="375" height="517"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProfileMadeByTVC" rowHeight="106" id="Hhe-4y-m0V" customClass="ProfileMadeByTableViewCell" customModule="Pear" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="106"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Hhe-4y-m0V" id="nPB-EU-Dri">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="105.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4x4-yo-IBX">
-                                                    <rect key="frame" x="20" y="0.0" width="105.5" height="105.5"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" secondItem="4x4-yo-IBX" secondAttribute="height" multiplier="1:1" id="cvF-aQ-Aaz"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile Made by" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S4I-m3-U2P">
-                                                    <rect key="frame" x="135.5" y="21" width="119" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="4x4-yo-IBX" secondAttribute="bottom" id="HQt-1A-ZIM"/>
-                                                <constraint firstItem="4x4-yo-IBX" firstAttribute="top" secondItem="nPB-EU-Dri" secondAttribute="top" id="Pvi-Hl-KFj"/>
-                                                <constraint firstItem="4x4-yo-IBX" firstAttribute="leading" secondItem="nPB-EU-Dri" secondAttribute="leading" constant="20" id="WAG-XP-Jqh"/>
-                                                <constraint firstItem="S4I-m3-U2P" firstAttribute="leading" secondItem="4x4-yo-IBX" secondAttribute="trailing" constant="10" id="YBj-Yf-Xal"/>
-                                                <constraint firstItem="S4I-m3-U2P" firstAttribute="top" secondItem="nPB-EU-Dri" secondAttribute="topMargin" constant="10" id="uMB-Lc-H84"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="profileFirstImageView" destination="4x4-yo-IBX" id="NhK-YC-5fK"/>
-                                            <outlet property="subtextLabel" destination="S4I-m3-U2P" id="wst-Nm-kVw"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e9U-Uq-JmU">
+                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="zV9-fG-U7M" firstAttribute="top" secondItem="xOE-Pd-bIj" secondAttribute="bottom" constant="10" id="0sZ-1h-Z41"/>
-                            <constraint firstItem="xOE-Pd-bIj" firstAttribute="leading" secondItem="YBi-ol-4bB" secondAttribute="leading" id="C8P-0x-1dx"/>
-                            <constraint firstItem="YBi-ol-4bB" firstAttribute="bottom" secondItem="zV9-fG-U7M" secondAttribute="bottom" constant="20" id="IY5-NM-KG3"/>
+                            <constraint firstItem="YBi-ol-4bB" firstAttribute="bottom" secondItem="e9U-Uq-JmU" secondAttribute="bottom" id="259-6f-OJ5"/>
                             <constraint firstItem="jm5-Sd-1i9" firstAttribute="leading" secondItem="YBi-ol-4bB" secondAttribute="leading" id="If6-cb-PdA"/>
-                            <constraint firstItem="xOE-Pd-bIj" firstAttribute="top" secondItem="jm5-Sd-1i9" secondAttribute="bottom" id="NjF-KE-ar5"/>
-                            <constraint firstItem="YBi-ol-4bB" firstAttribute="trailing" secondItem="zV9-fG-U7M" secondAttribute="trailing" constant="20" id="PF9-gm-mls"/>
+                            <constraint firstItem="YBi-ol-4bB" firstAttribute="trailing" secondItem="e9U-Uq-JmU" secondAttribute="trailing" id="Mg0-P4-wPB"/>
                             <constraint firstItem="jm5-Sd-1i9" firstAttribute="trailing" secondItem="YBi-ol-4bB" secondAttribute="trailing" id="YEh-Ef-5eY"/>
-                            <constraint firstItem="zV9-fG-U7M" firstAttribute="leading" secondItem="YBi-ol-4bB" secondAttribute="leading" constant="20" id="YpU-Sx-ob3"/>
-                            <constraint firstItem="YBi-ol-4bB" firstAttribute="trailing" secondItem="xOE-Pd-bIj" secondAttribute="trailing" id="bJX-R5-rXh"/>
+                            <constraint firstItem="e9U-Uq-JmU" firstAttribute="leading" secondItem="YBi-ol-4bB" secondAttribute="leading" id="cfd-u6-3Ez"/>
+                            <constraint firstItem="e9U-Uq-JmU" firstAttribute="top" secondItem="jm5-Sd-1i9" secondAttribute="bottom" id="k1L-n4-G63"/>
                             <constraint firstItem="jm5-Sd-1i9" firstAttribute="top" secondItem="YBi-ol-4bB" secondAttribute="top" id="m7u-GH-p0G"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YBi-ol-4bB"/>
                     </view>
                     <connections>
-                        <outlet property="requestProfileButton" destination="zV9-fG-U7M" id="Vot-Sq-N92"/>
-                        <outlet property="tableView" destination="xOE-Pd-bIj" id="uSC-aY-Bjw"/>
+                        <outlet property="scrollView" destination="e9U-Uq-JmU" id="DVM-CL-4fx"/>
                         <outlet property="titleLabel" destination="pgu-uw-QAM" id="ydr-nT-DAS"/>
                     </connections>
                 </viewController>
