--- a/Pear/Controllers/Profiles/Profile Demographics/ProfileDemographicsViewController.storyboard
+++ b/Pear/Controllers/Profiles/Profile Demographics/ProfileDemographicsViewController.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jYZ-sv-aGJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jYZ-sv-aGJ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -60,7 +60,7 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="zXz-pl-NMJ" secondAttribute="trailing" id="58e-kJ-4L1"/>
                                     <constraint firstAttribute="height" secondItem="zXz-pl-NMJ" secondAttribute="height" id="7gY-ep-c08"/>
-                                    <constraint firstAttribute="bottom" secondItem="zXz-pl-NMJ" secondAttribute="bottom" constant="8" id="AEE-Ph-Bka"/>
+                                    <constraint firstAttribute="bottom" secondItem="zXz-pl-NMJ" secondAttribute="bottom" id="AEE-Ph-Bka"/>
                                     <constraint firstItem="zXz-pl-NMJ" firstAttribute="top" secondItem="1OV-ap-Hxt" secondAttribute="top" id="IkH-h9-wNg"/>
                                     <constraint firstItem="zXz-pl-NMJ" firstAttribute="leading" secondItem="1OV-ap-Hxt" secondAttribute="leading" id="Vk1-yb-uYS"/>
                                 </constraints>
