Splash page updated

--- a/Pear/Controllers/Me Tab/MeTabViewController.storyboard
+++ b/Pear/Controllers/Me Tab/MeTabViewController.storyboard
@@ -48,6 +48,15 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e9U-Uq-JmU">
                                 <rect key="frame" x="0.0" y="70" width="375" height="597"/>
                             </scrollView>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vss-rd-H0W">
+                                <rect key="frame" x="295" y="587" width="60" height="60"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="cjs-zN-wcv"/>
+                                    <constraint firstAttribute="width" constant="60" id="rGP-tb-4Ci"/>
+                                </constraints>
+                                <state key="normal" image="me-icon-edit"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -55,13 +64,16 @@
                             <constraint firstItem="jm5-Sd-1i9" firstAttribute="leading" secondItem="YBi-ol-4bB" secondAttribute="leading" id="If6-cb-PdA"/>
                             <constraint firstItem="YBi-ol-4bB" firstAttribute="trailing" secondItem="e9U-Uq-JmU" secondAttribute="trailing" id="Mg0-P4-wPB"/>
                             <constraint firstItem="jm5-Sd-1i9" firstAttribute="trailing" secondItem="YBi-ol-4bB" secondAttribute="trailing" id="YEh-Ef-5eY"/>
+                            <constraint firstItem="YBi-ol-4bB" firstAttribute="trailing" secondItem="vss-rd-H0W" secondAttribute="trailing" constant="20" id="bOA-SE-hKW"/>
                             <constraint firstItem="e9U-Uq-JmU" firstAttribute="leading" secondItem="YBi-ol-4bB" secondAttribute="leading" id="cfd-u6-3Ez"/>
+                            <constraint firstItem="YBi-ol-4bB" firstAttribute="bottom" secondItem="vss-rd-H0W" secondAttribute="bottom" constant="20" id="fsd-y6-d98"/>
                             <constraint firstItem="e9U-Uq-JmU" firstAttribute="top" secondItem="jm5-Sd-1i9" secondAttribute="bottom" id="k1L-n4-G63"/>
                             <constraint firstItem="jm5-Sd-1i9" firstAttribute="top" secondItem="YBi-ol-4bB" secondAttribute="top" id="m7u-GH-p0G"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YBi-ol-4bB"/>
                     </view>
                     <connections>
+                        <outlet property="floatingEditButton" destination="vss-rd-H0W" id="lLf-j4-LyL"/>
                         <outlet property="scrollView" destination="e9U-Uq-JmU" id="DVM-CL-4fx"/>
                         <outlet property="titleLabel" destination="pgu-uw-QAM" id="ydr-nT-DAS"/>
                     </connections>
@@ -71,4 +83,7 @@
             <point key="canvasLocation" x="629.60000000000002" y="-242.42878560719643"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="me-icon-edit" width="144" height="144"/>
+    </resources>
 </document>
