--- a/Pear/Controllers/Landing Screen/LoadingScreenViewController.storyboard
+++ b/Pear/Controllers/Landing Screen/LoadingScreenViewController.storyboard
@@ -1,83 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bfV-8t-3yJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rpK-vz-ULg">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="FredokaOne-Regular.ttf">
-            <string>FredokaOne-Regular</string>
-        </array>
-        <array key="SF-Pro-Display-Regular.otf">
-            <string>SFProDisplay-Regular</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Loading Screen View Controller-->
-        <scene sceneID="8Zc-u2-bzq">
+        <scene sceneID="DdE-VC-mRN">
             <objects>
-                <viewController id="bfV-8t-3yJ" customClass="LoadingScreenViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="brt-ci-8Zo">
+                <viewController id="rpK-vz-ULg" customClass="LoadingScreenViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ftv-r8-Vwr">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landing-pear-background-1" translatesAutoresizingMaskIntoConstraints="NO" id="gIY-wO-s5h">
-                                <rect key="frame" x="0.0" y="113.5" width="375" height="250"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash-background.png" translatesAutoresizingMaskIntoConstraints="NO" id="7yh-91-gd7">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash-pear.png" translatesAutoresizingMaskIntoConstraints="NO" id="5dA-IR-G34">
+                                <rect key="frame" x="117.5" y="263.5" width="140" height="140"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="gIY-wO-s5h" secondAttribute="height" multiplier="3:2" id="XNe-n4-dR2"/>
+                                    <constraint firstAttribute="height" constant="140" id="2gM-a2-oKd"/>
+                                    <constraint firstAttribute="width" constant="140" id="5Rk-0z-uZ2"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landing-pear-1" translatesAutoresizingMaskIntoConstraints="NO" id="kwD-hZ-pdj">
-                                <rect key="frame" x="80" y="143.5" width="215" height="220"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="220" id="Sqm-3c-hJI"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Celebrate your friends" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gl3-SH-hHe">
-                                <rect key="frame" x="40" y="423.5" width="295" height="26.5"/>
-                                <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="22"/>
-                                <color key="textColor" red="0.2666666667" green="0.29411764709999999" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PEAR" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKk-SK-MUv">
-                                <rect key="frame" x="40" y="371.5" width="295" height="44"/>
-                                <fontDescription key="fontDescription" name="FredokaOne-Regular" family="Fredoka One" pointSize="36"/>
-                                <color key="textColor" red="0.2666666667" green="0.29411764709999999" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="kwD-hZ-pdj" firstAttribute="centerY" secondItem="brt-ci-8Zo" secondAttribute="centerY" constant="-80" id="1Gw-BO-HNe"/>
-                            <constraint firstItem="gIY-wO-s5h" firstAttribute="bottom" secondItem="kwD-hZ-pdj" secondAttribute="bottom" id="69y-yN-xYx"/>
-                            <constraint firstItem="gIY-wO-s5h" firstAttribute="centerX" secondItem="brt-ci-8Zo" secondAttribute="centerX" id="E5T-Yk-Rrs"/>
-                            <constraint firstAttribute="trailing" secondItem="kwD-hZ-pdj" secondAttribute="trailing" constant="80" id="K2g-Wp-gX6"/>
-                            <constraint firstItem="bKk-SK-MUv" firstAttribute="centerX" secondItem="Gl3-SH-hHe" secondAttribute="centerX" id="NJm-fh-juq"/>
-                            <constraint firstItem="kwD-hZ-pdj" firstAttribute="centerX" secondItem="brt-ci-8Zo" secondAttribute="centerX" id="QMi-W3-TxU"/>
-                            <constraint firstItem="Gl3-SH-hHe" firstAttribute="top" secondItem="bKk-SK-MUv" secondAttribute="bottom" constant="8" id="UhF-hh-Y2H"/>
-                            <constraint firstItem="Gl3-SH-hHe" firstAttribute="leading" secondItem="brt-ci-8Zo" secondAttribute="leading" constant="40" id="dOJ-2a-MSy"/>
-                            <constraint firstAttribute="trailing" secondItem="Gl3-SH-hHe" secondAttribute="trailing" constant="40" id="fP9-eX-V4x"/>
-                            <constraint firstItem="Gl3-SH-hHe" firstAttribute="centerX" secondItem="brt-ci-8Zo" secondAttribute="centerX" id="g4L-UZ-UmK"/>
-                            <constraint firstItem="kwD-hZ-pdj" firstAttribute="leading" secondItem="brt-ci-8Zo" secondAttribute="leading" constant="80" id="hxi-Ou-h3u"/>
-                            <constraint firstItem="gIY-wO-s5h" firstAttribute="width" secondItem="brt-ci-8Zo" secondAttribute="width" id="hzt-G5-9g4"/>
-                            <constraint firstItem="bKk-SK-MUv" firstAttribute="top" secondItem="kwD-hZ-pdj" secondAttribute="bottom" constant="8" id="qQF-MD-f11"/>
-                            <constraint firstItem="bKk-SK-MUv" firstAttribute="width" secondItem="Gl3-SH-hHe" secondAttribute="width" id="vHs-hY-g3J"/>
+                            <constraint firstItem="5dA-IR-G34" firstAttribute="centerY" secondItem="7yh-91-gd7" secondAttribute="centerY" id="7Ue-JE-BpJ"/>
+                            <constraint firstItem="5dA-IR-G34" firstAttribute="centerX" secondItem="7yh-91-gd7" secondAttribute="centerX" id="OKA-ke-zyV"/>
+                            <constraint firstAttribute="bottom" secondItem="7yh-91-gd7" secondAttribute="bottom" id="efU-49-fl6"/>
+                            <constraint firstItem="7yh-91-gd7" firstAttribute="top" secondItem="Ftv-r8-Vwr" secondAttribute="top" id="fDk-AT-sfT"/>
+                            <constraint firstItem="7yh-91-gd7" firstAttribute="leading" secondItem="SfH-pK-bc9" secondAttribute="leading" id="rUi-1Y-cKL"/>
+                            <constraint firstItem="7yh-91-gd7" firstAttribute="trailing" secondItem="SfH-pK-bc9" secondAttribute="trailing" id="yIR-wC-cVQ"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Ky4-Wn-rMb"/>
+                        <viewLayoutGuide key="safeArea" id="SfH-pK-bc9"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aCk-Tj-LDc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pgK-rt-DrW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <image name="landing-pear-1" width="220" height="220"/>
-        <image name="landing-pear-background-1" width="375" height="250"/>
+        <image name="splash-background.png" width="375" height="812"/>
+        <image name="splash-pear.png" width="105.75" height="123.5"/>
     </resources>
 </document>
