--- a/Pear/Controllers/Me Tab/MeTabViewController.storyboard
+++ b/Pear/Controllers/Me Tab/MeTabViewController.storyboard
@@ -28,21 +28,22 @@
                                             <constraint firstAttribute="height" constant="1" id="XHe-5C-CTM"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profiles Made for You" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pgu-uw-QAM">
-                                        <rect key="frame" x="106" y="14.5" width="163" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tab-icon-you-selected" translatesAutoresizingMaskIntoConstraints="NO" id="3cg-NJ-uHc">
+                                        <rect key="frame" x="170.5" y="8" width="34" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="3cg-NJ-uHc" secondAttribute="height" multiplier="1:1" id="PZ7-Wo-pud"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="pgu-uw-QAM" firstAttribute="centerX" secondItem="jm5-Sd-1i9" secondAttribute="centerX" id="28j-sL-W8t"/>
                                     <constraint firstAttribute="height" constant="50" id="Gng-0r-YjS"/>
                                     <constraint firstAttribute="bottom" secondItem="l2N-Iu-8ZE" secondAttribute="bottom" id="JJ3-jr-oHz"/>
-                                    <constraint firstItem="pgu-uw-QAM" firstAttribute="centerY" secondItem="jm5-Sd-1i9" secondAttribute="centerY" id="XWO-lz-uD3"/>
+                                    <constraint firstItem="3cg-NJ-uHc" firstAttribute="centerX" secondItem="jm5-Sd-1i9" secondAttribute="centerX" id="XB0-JF-1jk"/>
                                     <constraint firstItem="l2N-Iu-8ZE" firstAttribute="leading" secondItem="jm5-Sd-1i9" secondAttribute="leading" id="Zuq-nh-DH5"/>
+                                    <constraint firstAttribute="bottom" secondItem="3cg-NJ-uHc" secondAttribute="bottom" constant="8" id="nQN-pn-vF2"/>
                                     <constraint firstItem="l2N-Iu-8ZE" firstAttribute="width" secondItem="jm5-Sd-1i9" secondAttribute="width" id="rwd-PA-9xM"/>
+                                    <constraint firstItem="3cg-NJ-uHc" firstAttribute="centerY" secondItem="jm5-Sd-1i9" secondAttribute="centerY" id="yEQ-WR-4Lw"/>
                                 </constraints>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e9U-Uq-JmU">
@@ -75,7 +76,6 @@
                     <connections>
                         <outlet property="floatingEditButton" destination="vss-rd-H0W" id="lLf-j4-LyL"/>
                         <outlet property="scrollView" destination="e9U-Uq-JmU" id="DVM-CL-4fx"/>
-                        <outlet property="titleLabel" destination="pgu-uw-QAM" id="ydr-nT-DAS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v2k-eC-OOs" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -85,5 +85,6 @@
     </scenes>
     <resources>
         <image name="me-icon-edit" width="144" height="144"/>
+        <image name="tab-icon-you-selected" width="500" height="500"/>
     </resources>
 </document>
