--- a/Pear/Controllers/Create Profile Flow/Notify Friend/GetStartedNotifyFriendViewController.storyboard
+++ b/Pear/Controllers/Create Profile Flow/Notify Friend/GetStartedNotifyFriendViewController.storyboard
@@ -114,7 +114,9 @@
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NGe-E3-4qL">
                                 <rect key="frame" x="110" y="303" width="155" height="30"/>
-                                <state key="normal" title="Choose from Contacts"/>
+                                <state key="normal" title="Choose from Contacts">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="contactsButtonClicked:" destination="4y9-g9-KBp" eventType="touchUpInside" id="mdQ-6l-bh0"/>
                                 </connections>
